fix: CSS layout issues on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 #App {
   text-align: center;
-  /* padding-right: 1.5rem;
-  padding-left: 0.5rem; */
   height: 100svh;
   width: 100svw;
   overflow-y: scroll;
